--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=auction
+
+spring.banner.location=banner.txt
+
 # Config db
 spring.datasource.url=jdbc:sqlserver://auctionwebsite.database.windows.net:1433;database=DB_AUCTION;user=sqlamin@auctionwebsite;password=P@ssswp391;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+
+spring.jpa.hibernate.ddl-auto=none
