config authentication with jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.banner.location=banner.txt
 spring.datasource.url=jdbc:sqlserver://auctionwebsite.database.windows.net:1433;database=DB_AUCTION;user=sqlamin@auctionwebsite;password=P@ssswp391;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
 spring.jpa.hibernate.ddl-auto=none
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
