feat: activation user account with sending email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.banner.location=banner.txt
 # Config db
 spring.datasource.url=jdbc:sqlserver://auctionwebsite.database.windows.net:1433;database=DB_AUCTION;user=sqlamin@auctionwebsite;password=P@ssswp391;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
+# Config create table automatically
 spring.jpa.hibernate.ddl-auto=none
 
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+# Config email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=daugia.dgs789@gmail.com
+spring.mail.password=gzrc jqdz vxjp rwrs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
