--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.application.name=auction
 spring.banner.location=banner.txt
 
 # Config db
-spring.datasource.url=jdbc:sqlserver://auctionwebsite.database.windows.net:1433;database=DB_AUCTION;user=sqlamin@auctionwebsite;password=P@ssswp391;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
+spring.datasource.username=sa
+spring.datasource.password=12345
 
 # Config create table automatically
 spring.jpa.hibernate.ddl-auto=update
