--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=sa
 spring.datasource.password=12345
 
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Config email
 spring.mail.host=smtp.gmail.com
