--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=auction
 spring.banner.location=banner.txt
 
 # Config db
-spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
+spring.datasource.url=jdbc:sqlserver://sqlserver:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
 spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.password=Thanhth@nh1
 
 # Config create table automatically
 spring.jpa.hibernate.ddl-auto=none
