--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,23 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      sqlserver:
+        image: mcr.microsoft.com/mssql/server:2019-latest
+        ports:
+          - "1433:1433"
+        env:
+          ACCEPT_EULA: Y
+          SA_PASSWORD: Thanhth@nh1
+          MSSQL_PID: Express
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Create database
+        run: |
+          sqlcmd -S localhost -U sa -P Thanhth@nh1 -i db/init.sql
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
