--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=auction
 # Config db
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
 spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.password=Thanhth@nh1
