--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=auction
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
 spring.datasource.username=sa
 spring.datasource.password=Thanhth@nh1
+
+
+spring.jpa.hibernate.ddl-auto=none
