--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,17 +1,8 @@
-# Dùng official SQL Server 2019 image của Microsoft
 FROM mcr.microsoft.com/mssql/server:2019-latest
 
-# Biến môi trường
 ENV ACCEPT_EULA=Y
 ENV SA_PASSWORD=Thanhth@nh1
 
-# Copy the SQL script vào container
-COPY init.sql /usr/src/app/init.sql
+COPY init.sql /docker-entrypoint-initdb.d/init.sql
 
-# Chạy lệnh trong file sql
-RUN /opt/mssql/bin/sqlservr & sleep 30 \
-    && /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $SA_PASSWORD -i /usr/src/app/init.sql \
-    && pkill sqlservr
-
-# Khởi động sql server
-CMD ["/opt/mssql/bin/sqlservr"]
+EXPOSE 1433
