--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,17 @@
 version: '3.8'
 
 services:
-  sqlserver:
-    build:
-      context: ./db
-      dockerfile: Dockerfile
+  auction-api:
+    image: ghcr.io/phuuthanh2003/auction-api:latest
+    ports:
+      - "8080:8080"
+    depends_on:
+      - auction-database
+
+  auction-database:
+    image: ghcr.io/phuuthanh2003/auction-database:latest
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=Thanhth@nh1
     ports:
       - "1433:1433"
-    environment:
-      SA_PASSWORD: "Thanhth@nh1"
-      ACCEPT_EULA: "Y"
-    networks:
-      - internal
-  app:
-    build:
-      context: .
-      dockerfile: server/Dockerfile
-    ports:
-      - "8085:8080"
-    depends_on:
-      - sqlserver
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:sqlserver://sqlserver:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
-      SPRING_DATASOURCE_USERNAME: sa
-      SPRING_DATASOURCE_PASSWORD: Thanhth@nh1
-    networks:
-      - internal
-networks:
-  internal:
-    name: internal
-
