--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>vn.webapp.backend</groupId>
     <artifactId>auction</artifactId>
     <version>1.0.0</version>
+    <packaging>jar</packaging>
     <name>auction</name>
     <description>Project for Spring Boot for Auction Jewelry</description>
     <properties>
