--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,7 @@
-# Build
-FROM maven:3.8.3-openjdk-17 AS build
-WORKDIR /app
-COPY .. /app/
-RUN mvn clean package
+FROM openjdk:17-jdk-alpine
 
-# Package
-FROM openjdk:17-alpine
 WORKDIR /app
-COPY --from=build /app/target/*.jar /app/app.jar
+COPY ./*.jar /app/app.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app.jar"]
+CMD ["java", "-jar", "/app/app.jar"]
