config init.sql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
 version: '3.0'
 
 services:
+  auction-database:
+    image: ghcr.io/phuuthanh2003/auction-database:latest
+    ports:
+      - "1433:1433"
+    environment:
+      SA_PASSWORD: "Thanhth@nh1"
+      ACCEPT_EULA: "Y"
+
   auction-api:
     image: ghcr.io/phuuthanh2003/auction-api:latest
     ports:
-      - "8085:8080"
+      - "8080:8080"
     depends_on:
       - auction-database
-
-  auction-database:
-    image: ghcr.io/phuuthanh2003/auction-database:latest
     environment:
-      - ACCEPT_EULA=Y
-      - SA_PASSWORD=Thanhth@nh1
-    ports:
-      - "1433:1433"
+      SPRING_DATASOURCE_URL: jdbc:sqlserver://auction-database:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
+      SPRING_DATASOURCE_USERNAME: sa
+      SPRING_DATASOURCE_PASSWORD: Thanhth@nh1
