--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,18 +1,38 @@
-# Dùng official SQL Server 2019 image của Microsoft
+## Dùng official SQL Server 2019 image của Microsoft
+#FROM mcr.microsoft.com/mssql/server:2019-latest
+#
+## Biến môi trường
+#ENV ACCEPT_EULA=Y
+#ENV SA_PASSWORD=Thanhth@nh1
+#
+## Copy the SQL script vào container
+#COPY init.sql /usr/src/app/init.sql
+#
+## Chạy lệnh trong file sql
+#RUN /opt/mssql/bin/sqlservr & sleep 30 \
+#    && /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $SA_PASSWORD -i /usr/src/app/init.sql \
+#    && pkill sqlservr
+#
+#EXPOSE 1433
+## Khởi động sql server
+#CMD ["/opt/mssql/bin/sqlservr"]
+
+# Use a base image with SQL Server installed
 FROM mcr.microsoft.com/mssql/server:2019-latest
 
-# Biến môi trường
+# Set environment variables
 ENV ACCEPT_EULA=Y
 ENV SA_PASSWORD=Thanhth@nh1
 
-# Copy the SQL script vào container
-COPY init.sql /usr/src/app/init.sql
+# Create a directory for the SQL scripts
+RUN mkdir -p /usr/src/app
 
-# Chạy lệnh trong file sql
-RUN /opt/mssql/bin/sqlservr & sleep 30 \
-    && /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $SA_PASSWORD -i /usr/src/app/init.sql \
-    && pkill sqlservr
+# Copy the init.sql script into the container
+COPY ./init.sql /usr/src/app/init.sql
 
+# Expose the default SQL Server port
 EXPOSE 1433
-# Khởi động sql server
-CMD ["/opt/mssql/bin/sqlservr"]
+
+# Run SQL Server and execute the init.sql script
+CMD /bin/bash -c "/opt/mssql/bin/sqlservr & sleep 30 && /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $SA_PASSWORD -d master -i /usr/src/app/init.sql"
+
