--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -30,9 +30,12 @@ RUN mkdir -p /usr/src/app
 # Copy the init.sql script into the container
 COPY ./init.sql /usr/src/app/init.sql
 
+# Run SQL Server and execute the init.sql script during image build
+RUN /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $SA_PASSWORD -d master -i /usr/src/app/init.sql
+
 # Expose the default SQL Server port
 EXPOSE 1433
 
-# Run SQL Server and execute the init.sql script
-CMD /bin/bash -c "/opt/mssql/bin/sqlservr & sleep 30 && /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $SA_PASSWORD -d master -i /usr/src/app/init.sql"
+# Run SQL Server
+CMD ["/opt/mssql/bin/sqlservr"]
 
