--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,14 @@ spring.application.name=auction
 spring.banner.location=banner.txt
 
 # Config db
-spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
+spring.datasource.url=sqlserver://sa:Thanhth@nh1@microsoftsql.railway.internal:1433;databaseName=DB_AUCTION;
 spring.datasource.username=sa
-spring.datasource.password=12345
+#spring.datasource.password=12345
+spring.datasource.password=Thanhth@nh1
 
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 # Config email
 spring.mail.host=smtp.gmail.com
