--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,8 @@
 spring.application.name=auction
+server.port=9999
+
+# Config banner startup
+spring.banner.location=banner.txt
 
 # Config db
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
