--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=auction
-server.port=8081
+server.port=${PORT:8080}
 # Config banner startup
 spring.banner.location=banner.txt
 
