--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,14 @@
 spring.application.name=auction
-server.port=${PORT:8080}
+server.port=8085
 
 # Config banner startup
 spring.banner.location=banner.txt
 
 # Config db
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:10597/DB_AUCTION
-spring.datasource.username=root
-spring.datasource.password=BxfkFKmKqporMffimTRuTptjFAunLXKh
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
+spring.datasource.username=sa
+spring.datasource.password=Thanhth@nh1
+
 # Config create table automatically
 spring.jpa.hibernate.ddl-auto=none
 
