--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.banner.location=banner.txt
 spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:10597/DB_AUCTION
 spring.datasource.username=root
 spring.datasource.password=BxfkFKmKqporMffimTRuTptjFAunLXKh
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Config create table automatically
 spring.jpa.hibernate.ddl-auto=update
 
