--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=auction
-server.port=8085
+server.port=8080
 
 # Config banner startup
 spring.banner.location=banner.txt
@@ -11,6 +11,9 @@ spring.datasource.password=Thanhth@nh1
 
 # Config create table automatically
 spring.jpa.hibernate.ddl-auto=none
+
+# Base URL Front-end
+base.url.frontend=http://localhost:3000
 
 # Config email
 spring.mail.host=smtp.gmail.com
@@ -24,7 +27,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 payment.vnPay.url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 payment.vnPay.tmnCode=MV56IQL8
 payment.vnPay.secretKey=1EU30GTJ9XXSUNDXF8E3H15HUTZVUIDA
-payment.vnPay.returnUrl=http://localhost:8080/api/v1/payment/vn-pay-callback
+payment.vnPay.returnUrl=http://localhost:8085/api/v1/payment/vn-pay-callback
 payment.vnPay.version=2.1.0
 payment.vnPay.command=pay
 payment.vnPay.orderType=other
