--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=auction
 server.port=${PORT:8080}
 
+# Base URL Front-end
+base.url.frontend=https://auction-webapp-production.up.railway.app
+
 # Config banner startup
 spring.banner.location=banner.txt
 
