--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 spring.application.name=auction
 server.port=${PORT:8080}
 
-# Base URL Front-end
-base.url.frontend=https://auction-webapp-production.up.railway.app
-
 # Config banner startup
 spring.banner.location=banner.txt
 
@@ -13,7 +10,7 @@ spring.datasource.username=root
 spring.datasource.password=BxfkFKmKqporMffimTRuTptjFAunLXKh
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Config email
 spring.mail.host=smtp.gmail.com
