--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -80,6 +80,6 @@ jobs:
         run: npm i -g @railway/cli
 
       - name: Deploy
-        run: railway up
+        run: railway up --service overflowing-joy
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
