feat: create transaction for winner after auction finished

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,10 +10,7 @@ spring.datasource.username=sa
 spring.datasource.password=Thanhth@nh1
 
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=none
-
-# Base URL Front-end
-base.url.frontend=http://localhost:3000
+spring.jpa.hibernate.ddl-auto=update
 
 # Config email
 spring.mail.host=smtp.gmail.com
