config baseurl frontend

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 spring.application.name=auction
 server.port=8080
 
+frontend.base-url=http://localhost:3000
+
 # Config banner startup
 spring.banner.location=banner.txt
 
@@ -10,7 +12,7 @@ spring.datasource.username=sa
 spring.datasource.password=Thanhth@nh1
 
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Config email
 spring.mail.host=smtp.gmail.com
