--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,10 +9,10 @@ spring.banner.location=banner.txt
 # Config db
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;collation=Latin1_General_100_CI_AS_SC_UTF8;databaseName=DB_AUCTION;
 spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.password=Thanhth@nh1
 
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Config email
 spring.mail.host=smtp.gmail.com
