--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.datasource.username=sa
 spring.datasource.password=Thanhth@nh1
 
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Config email
 spring.mail.host=smtp.gmail.com
