--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,10 +7,10 @@ spring.banner.location=banner.txt
 # Config db
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
 spring.datasource.username=sa
-spring.datasource.password=Thanhth@nh1
+spring.datasource.password=12345
 
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 # Config email
 spring.mail.host=smtp.gmail.com
