--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.username=root
 spring.datasource.password=BxfkFKmKqporMffimTRuTptjFAunLXKh
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Config create table automatically
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 # Config email
 spring.mail.host=smtp.gmail.com
