--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=auction
 server.port=${PORT:8080}
 
-frontend.base-url=https://fe-deploy-hazel.vercel.app
+frontend.base-url=https://website-auction-production.vercel.app
 
 # Config banner startup
 spring.banner.location=banner.txt
