--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.banner.location=banner.txt
 # Config db
 spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=DB_AUCTION;
 spring.datasource.username=sa
-spring.datasource.password=Thanhth@nh1
+spring.datasource.password=12345
 
 # Config create table automatically
 spring.jpa.hibernate.ddl-auto=update
