--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,13 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
     services:
-      sqlserver:
-        image: mcr.microsoft.com/mssql/server:2019-latest
+      mysql:
+        image: mysql:latest
         ports:
-          - "1433:1433"
+          - "3306:3306"
         env:
-          ACCEPT_EULA: Y
-          SA_PASSWORD: ${{ secrets.SQL_SA_PASSWORD }}
+          MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+          MYSQL_DATABASE: DB_AUCTION
           MSSQL_PID: Express
 
     steps:
@@ -30,9 +30,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Set up MySQL client
+        run: sudo apt-get install -y mysql-client
+
       - name: Execute init.sql
         run: |
-          sqlcmd -S localhost -U sa -P ${{ secrets.SQL_SA_PASSWORD }} -i db/init.sql
+          mysql -h localhost -u root DB_AUCTION < db/init.sql
 
       - name: Run Unit Tests
         run: mvn test
